--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/react-beautiful-dnd": "^13.1.8",
+    "date-fns": "^3.6.0",
     "next": "14.2.5",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
